client/src/App.css
/* ... */
.szh-menu__arrow {
  box-sizing: border-box;
  width: 0.75rem;
  height: 0.75rem;
  background-color: #fff;
  border: 1px solid transparent;
  border-left-color: rgba(0, 0, 0, 0.1);
  border-top-color: rgba(0, 0, 0, 0.1);
  z-index: -1;
}
.szh-menu__arrow--dir-left {
  right: -0.375rem;
  transform: translateY(-50%) rotate(135deg);
}
.szh-menu__arrow--dir-right {
  left: -0.375rem;
  transform: translateY(-50%) rotate(-45deg);
}
.szh-menu__arrow--dir-top {
  bottom: -0.375rem;
  transform: translateX(-50%) rotate(-135deg);
}
.szh-menu__arrow--dir-bottom {
  top: -0.375rem;
  transform: translateX(-50%) rotate(45deg);
}
.szh-menu__item {
  cursor: pointer;
}
.szh-menu__item:focus {
  outline: none;
}
.szh-menu__item--hover {
  background-color: #ebebeb;
}
.szh-menu__item--focusable {
  cursor: default;
  background-color: inherit;
}
.szh-menu__item--disabled {
  cursor: default;
  color: #aaa;
}
.szh-menu__group {
  box-sizing: border-box;
}
.szh-menu__radio-group {
  margin: 0;
  padding: 0;
  list-style: none;
}
.szh-menu__divider {
  height: 1px;
  margin: 0.5rem 0;
  background-color: rgba(0, 0, 0, 0.12);
}

.szh-menu-button {
  margin-top: 10px;
  box-sizing: border-box;
  font-size: .75em;
  border-radius: .75em;
  animation: beat 2s infinite;
}

@keyframes beat {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.025);
  }
  100% {
    transform: scale(1);
  }
  
}
#center-down-button {
  position: relative;
  font-size: .80em;
  top: -1px;
  user-select: none;
}

.bottom-pane {
  background-color: black;
}

.true {
  background-color: darkred;
  color: white;
  text-align: center;
  font-size: 5pt;
}

.false {
  background-color: darkgreen;
  color: white;
  text-align: center;
  font-size: 5pt;

}

html,
body {
  margin: 0;
  height: 100%;
  z-index: -2;

}
nav {
  pointer-events: auto;
  z-index: 2;
}
.map {
  position: absolute;
  overflow: hidden;
/* pointer-events: none; */
  top: 0;
  bottom: 0;
  width: 100%;
} 

/* #main-map:first-of-type { display:none; } */

#control-panel {
  background-color: whitesmoke;
}
nav {
  position: absolute;
}
.ol-zoom {
  top: 65px;
  right: 8px;
  background-color: transparent;
}

.modal-content {
  background-color: rgba(255, 255, 255, .25) I !important;
}

.toxic-table {
  margin: 10px;
  padding: 10px;
}

.btn-flat {
  background: var(--blue-gradient) !important;
  color: white !important;
}

.btn-xxl {
  padding: 1rem 1.5rem;
  font-size: 1.5rem;
}

.navbar-main {
  background: #f5f5f5 !important;
  box-shadow: var(--black-shadow);
}

.slide-pane__header {
  background: #f5f5f5 !important;
}
.slide-pane_from_bottom {
  z-index: 9999;
  height: 75vh !important;
  margin-top: 25vh !important;
  box-shadow: var(--black-shadow) !important;

}

.offcanvas-header {
  background: #f5f5f5 !important;
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
}

textarea {
  color: blue;
  border-color: lightblue;
  font-family: 'Pacifico', sans-serif;
}

p {
  font-family: 'Pacifico', sans-serif;
}


.custom-navbar, .navbar-brand,  .Navbar{
  font-family: 'Pacifico', sans-serif; 
}
#map {
  width: 100%;
  height: 100%;
}
.mapboxgl-map {
  font: 12px/20px Helvetica Neue,Arial,Helvetica,sans-serif;
  overflow: hidden;
  position: relative;
  -webkit-tap-highlight-color: rgba(0,0,0,0)
}

.mapboxgl-canvas {
  left: 0;
  top: 0;
  width: 100%;
  height: auto;
}

.mapboxgl-map {
  margin: 0px;
  padding: 0px;
  width: 100%;
  height: 100%;
}

.mapboxgl-canary {
  background-color: salmon
}

.mapboxgl-canvas-container.mapboxgl-interactive,.mapboxgl-ctrl-group button.mapboxgl-ctrl-compass {
  cursor: grab;
  -webkit-user-select: none;
  user-select: none
}

.mapboxgl-canvas-container.mapboxgl-interactive.mapboxgl-track-pointer {
  cursor: pointer
}

.mapboxgl-canvas-container.mapboxgl-interactive:active,.mapboxgl-ctrl-group button.mapboxgl-ctrl-compass:active {
  cursor: grabbing
}

.mapboxgl-canvas-container.mapboxgl-touch-zoom-rotate,.mapboxgl-canvas-container.mapboxgl-touch-zoom-rotate .mapboxgl-canvas {
  touch-action: pan-x pan-y
}

.mapboxgl-canvas-container.mapboxgl-touch-drag-pan,.mapboxgl-canvas-container.mapboxgl-touch-drag-pan .mapboxgl-canvas {
  touch-action: pinch-zoom
}

.mapboxgl-canvas-container.mapboxgl-touch-zoom-rotate.mapboxgl-touch-drag-pan,.mapboxgl-canvas-container.mapboxgl-touch-zoom-rotate.mapboxgl-touch-drag-pan .mapboxgl-canvas {
  touch-action: none
}

.mapboxgl-ctrl-bottom-left,.mapboxgl-ctrl-bottom-right,.mapboxgl-ctrl-top-left,.mapboxgl-ctrl-top-right {
  position: absolute;
  pointer-events: none;
  /* z-index: 2 */
}

.mapboxgl-ctrl-top-left {
  top: 0;
  left: 0
}

.mapboxgl-ctrl-top-right {
  top: 0;
  right: 0
}

.mapboxgl-ctrl-bottom-left {
  bottom: 0;
  left: 0
}

.mapboxgl-ctrl-bottom-right {
  right: 0;
  bottom: 0
}

.mapboxgl-ctrl {
  clear: both;
  pointer-events: auto;
  transform: translate(0)
}

.mapboxgl-ctrl-top-left .mapboxgl-ctrl {
  margin: 10px 0 0 10px;
  float: left
}

.mapboxgl-ctrl-top-right .mapboxgl-ctrl {
  margin: 10px 10px 0 0;
  float: right
}

.mapboxgl-ctrl-bottom-left .mapboxgl-ctrl {
  margin: 0 0 10px 10px;
  float: left
}

.mapboxgl-ctrl-bottom-right .mapboxgl-ctrl {
  margin: 0 10px 10px 0;
  float: right
}

.mapboxgl-ctrl-group {
  border-radius: 4px;
  background: #fff
}

.mapboxgl-ctrl-group:not(:empty) {
  box-shadow: 0 0 0 2px rgba(0,0,0,.1)
}

@media (-ms-high-contrast:active) {
  .mapboxgl-ctrl-group:not(:empty) {
      box-shadow: 0 0 0 2px ButtonText
  }
}

.mapboxgl-ctrl-group button {
  width: 29px;
  height: 29px;
  display: block;
  padding: 0;
  outline: none;
  border: 0;
  box-sizing: border-box;
  background-color: transparent;
  cursor: pointer;
  overflow: hidden
}

.mapboxgl-ctrl-group button+button {
  border-top: 1px solid #ddd
}

.mapboxgl-ctrl button .mapboxgl-ctrl-icon {
  display: block;
  width: 100%;
  height: 100%;
  background-repeat: no-repeat;
  background-position: 50%
}
/* ... */

